added windowfunctions and the requirement update

--- a/required_data/requirements.txt
+++ b/required_data/requirements.txt
@@ -1,2 +1,3 @@
 https://colab.research.google.com/drive/1JbiCsNyrzALW_fCC-8VNPhlN2PJRN3Ks?usp=sharing - TASK DATA
 https://drive.google.com/drive/folders/1xCNbO_LJIkr7bi9YDa7hUFYgJ-IZ01A - DATA_SET FOR PRACTICE
+https://colab.research.google.com/drive/1EuxChezFh9H772RPJQvoeoO-aheCFAs_?usp=sharing#scrollTo=rp-6tPAYGMYz - WINDOW FUCNTION PRACTICE
